[package]
name = "linux-memkit"
version = "1.0.3"
edition = "2024"
description = "Pretty basic memory library for linux using procfs & libc with toggleable random delay between reads. Still in testing, if you have issues, contact me on discord: mwmwmwmwmwwwmwmwmwmw"
license = "MIT OR Apache-2.0"
include = [
    "src/**/lib.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[dependencies]
atomic = "0.6.1"
libc = "0.2.184"
procfs = "0.18.0"
rand = "0.10.0"

